--- a/bonus/assets/css/style.css
+++ b/bonus/assets/css/style.css
@@ -1,3 +1,10 @@
 body {
-    background-color: palegreen;
+    background-color: #fdd773;
+    font-family: 'Josefin Sans', sans-serif;
 }
+
+img{
+    max-width: 200px;
+    box-shadow: 0 0 10px gray;
+}
+
